--- a/Style.css
+++ b/Style.css
@@ -63,10 +63,13 @@ header .container {
 nav ul {
     display: flex;
     gap: 5px;
+    align-items: center;
 }
 
 nav ul li {
     margin-left: 0;
+    display: flex;
+    align-items: center;
 }
 
 nav ul li a {
